device DTO feature branch